# kaizen

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile-postgres  LICENSE  README.md  api_reference.html  cloud_platform.html  config.json  configuration.html  contact_us.html  contributing.html  demo.py  docker-compose-dev.yml  docker-compose.yml  feature_request.html  getting_started.html  index.html  initial_setup_guide.html  install_tree_sitter_languages.sh  logs.txt  pyproject.toml  requirements.txt  sdk_reference.html  self_hosting_guide.html  test.txt
.experiments/code_review/: evaluate.py  main.py  print_info.py
.experiments/unit_test/: main.py
.github/: FUNDING.yml
.github/workflows/:  pypi-publish-cli.yml   pypi-publish.yml  build-docker.yml  kaizen-tests.yml  lint-checks.yml  update-docs.yml
.kaizen/api_test/: test__pet.py  test__pet_findbystatus.py  test__pet_findbytags.py  test__pet_petid.py  test__pet_petid_uploadimage.py  test__store_inventory.py  test__store_order.py  test__store_order_orderid.py  test__user.py  test__user_createwithlist.py  test__user_login.py  test__user_logout.py  test__user_username.py
.kaizen/e2e-tests/: tests.json
.kaizen/unit_test/: test_create_folder.py  test_create_pr_description.py  test_create_pr_review_text.py  test_create_test_files.py  test_get_parent_folder.py  test_get_web_html.py
api/: main.py
api/github_helper/: endpoints.py  installation.py  permissions.py  pull_requests.py  utils.py
cli/: pyproject.toml
cli/.kaizen/ui-tests/: tests.json
cli/.kaizen/ui-tests/ai_qa_assistant_section/: test_verify_ai_qa_assistant_content.py
cli/.kaizen/ui-tests/hero_section/: test_verify_book_a_demo_button.py  test_verify_join_waitlist_button.py
cli/.kaizen/ui-tests/join_waitlist_section/: test_verify_join_waitlist_form.py
cli/.kaizen/ui-tests/navigation_menu/: test_verify_navigation_menu_items.py
cli/.kaizen/ui-tests/page_title_meta_description/: test_verify_meta_description.py  test_verify_page_title.py
cli/.kaizen/ui-tests/partner_logos_section/: test_verify_partner_logos.py
cli/.kaizen/ui-tests/smarter_code_safer_software_section/: test_verify_smarter_code_content.py
cli/.kaizen/ui-tests/social_links_section/: test_verify_social_links.py
cli/.kaizen/ui-tests/test_smarter_build_better_section/: test_verify_test_smarter_content.py
cli/kaizen_cli/: cli.py  utils.py
cli/kaizen_cli/commands/: config_commands.py  reviewer_commands.py  unit_test_commands.py
cli/kaizen_cli/config/: default_config.py  manager.py
cli/kaizen_cli/hooks/: prepare-commit-msg  setup.py
cloud_platform/: getting_started.html
cloudcode/actions/: reviews.py  ui_tests.py
cloudcode/generator/: ui.py
cloudcode/helpers/: output.py  parser.py
cloudcode/llms/: prompts.py  provider.py
cloudcode/playwright/: helper.py  playwright.config.js
cloudcode/reviewer/: code_review.py
cloudcode/utils/: config.py
codecheck/actions/: reviews.py
codecheck/helpers/: output.py  parser.py
codecheck/llms/: prompts.py  provider.py
codecheck/templates/: pull_request_review.md
contributing/: code_of_conduct.html  development_setup.html  how_to_contribute.html  overview.html  pull_request_process.html  setting_various_llms.html  style_guide.html
db_setup/: init.sql
docs/: next.config.js  package-lock.json  package.json  styles.css  theme.config.jsx
docs/.next/: trace
docs/pages/: _app.jsx  _meta.json  api_reference.mdx  cloud_platform.mdx  configuration.mdx  contact_us.mdx  contributing.mdx  feature_request.mdx  getting_started.mdx  github_app.md  index.mdx  initial_setup_guide.mdx  sdk_reference.mdx  self_hosting_guide.mdx
docs/styles/: styles.css
examples/api_test/: api-main.py  api-schema.json
examples/ask_question/: main.py
examples/basic/: execute.py  generate.py
examples/code_fix/: main.py
examples/code_review/: main.py
examples/code_scan/: main.py
examples/demo/: main.py
examples/e2e_test/: README.MD  generate.py
examples/ragify_codebase/: main.py
examples/ui_review/: main.py
examples/unittest/: main.py  runner.py  rust.py  typescript_unittest.py
examples/work_summarizer/: main.py
extensions/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
extensions/api_history/: history.msgpack
extensions/media/: sidebar.css
extensions/src/: SidebarProvider.ts  extension.ts  sidebar.ts
extensions/vscode/: README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
features/: code_review.html  code_scan.html  e2e_testing.html  ui_review.html  unit_test.html  work_summary.html
github_app/: main.py
github_app/github_helper/: constants.py  endpoints.py  installation.py  permissions.py  pull_requests.py  utils.py
kaizen/generator/: ui.py  (+7 more)
sdk_reference/: code_review.html  code_scan.html  e2e_testing.html  ui_review.html  unit_test.html  work_summary.html
self_hosting_guide/: clone_repository.html  deploy_api.html  executing_tests.html  generating_tests.html  install_dependencies.html  prepare_configuration.html  setup_github_app.html  using_azure_openai_with_kaizen.html  using_custom_llms_with_kaizen.html
(+1254 files in other folders)
