[tool.poetry]
name = "kaizen-cloudcode"
version = "0.4.10"
description = "An intelligent coding companion that accelerates your development workflow by providing efficient assistance, enabling you to craft high-quality code more rapidly."
authors = ["Saurav Panda <saurav.panda@cloudcode.ai>"]
license = "Apache2.0"
readme = "README.md"
packages = [
    { include = "kaizen" }
]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.31.0"
pyjwt = "^2.8.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
litellm = "^1.40.29"
flake8 = "^7.0.0"
black = "^24.3.0"
cryptography = ">=42.0.5,<44.0.0"
bs4 = "^0.0.2"
nest-asyncio = "^1.6.0"
pytest-playwright = "^0.4.4"
pip = "^24.0"
fuzzywuzzy = "^0.18.0"
llama-index-core = "0.10.65"
llama-index-readers-file = "^0.1.25"
sqlalchemy = "^2.0.31"
esprima = "^4.0.1"
escodegen = "^1.0.11"
redis = "^5.0.7"
tqdm = "^4.66.5"
tree-sitter = "^0.22.3"
llama-index = "^0.10.65"
tree-sitter-python = "^0.21.0"
tree-sitter-javascript = "^0.21.4"
tree-sitter-typescript = "^0.21.2"
tree-sitter-rust = "^0.21.2"
llama-index-llms-litellm = "^0.1.4"
llama-index-embeddings-litellm = "^0.1.1"
pre-commit = "^3.8.0"
qdrant-client = "^1.11.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.35.5"
python-levenshtein = "^0.25.1"
pygithub = "^2.4.0"
gitpython = "^3.1.43"

[tool.poetry.extras]
python = ["tree-sitter-python"]
javascript = ["tree-sitter-javascript"]
typescript = ["tree-sitter-typescript"]
rust = ["tree-sitter-rust"]
all = ["tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript", "tree-sitter-rust"]

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

