[tool.poetry]
name = "kaizen-cli"
version = "0.2.1"
description = ""
authors = ["Saurav Panda <sgp65@cornell.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
click = "^8.1.3"
kaizen-cloudcode = "^0.4.8"


[tool.poetry.scripts]
kaizen-cli = "kaizen_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"