[tool.poetry]
name = "kaizen-cli"
version = "0.2.6"
description = ""
authors = ["Saurav Panda <sgp65@cornell.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
click = "^8.1.3"
kaizen-cloudcode = "^0.4.15"

[tool.poetry.group.dev.dependencies]
kaizen-cloudcode = {path = "..", develop = true, optional = true}

[tool.poetry.group.prod.dependencies]
kaizen-cloudcode = "^0.4.8"

[tool.poetry.scripts]
kaizen-cli = "kaizen_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"